[package]
name = "bedrock-leveldb"
version = "1.0.0"
edition = "2024"
authors = [ "NguyenDuck" ]
description = "Safe, ergonomic Rust bindings for Minecraft Bedrock's LevelDB format."
license = "AGPL-3.0-only"
repository = "https://github.com/Blocktopograph/bedrock-leveldb"
keywords = [ "leveldb", "bedrock", "minecraft", "blocktopograph" ]


[dependencies]
libc = "0.2"


[dependencies.bedrock-leveldb-sys]
version = "1"


[dependencies.thiserror]
version = "2.0"
optional = true


[dependencies.log]
version = "0.4"
optional = true


[dependencies.parking_lot]
version = "0.12"
optional = true


[features]
default = [ ]
error = [ "thiserror" ]
logging = [ "log" ]


[dev-dependencies]
anyhow = "1.0"
tempfile = "3"
